fixed, z-index at project card post container. Delete unnecesary code at main.js

--- a/main.css
+++ b/main.css
@@ -1303,8 +1303,45 @@ textPath {
     font-weight: 200px;
 }
 
-.project-card__body-text
- {
+
+.project-card__header-cover--active{
+position: absolute;
+height: 150px;width: 150px;
+border-radius: 50%;
+display: flex;
+justify-content: center;
+align-items: center;
+top:43px;
+
+}
+
+.project-card__header-cover--no-active{
+display:none
+}
+
+
+.project-card__header-cover--active--green{
+background-color: #4da27acc;
+border: solid #fffffa 1px;
+}
+
+.project-card__header-cover--active--pink{
+background-color: #e48697cc;
+border: solid #fffffa 1px;
+
+}
+
+
+.project-card__header-cover-text{
+font-size: 17px;
+color: white;
+}
+
+
+
+
+
+.project-card__body-text {
     max-width: 250px;
     margin-top: 0px;
     padding: 0% 10% 5% 10%;
@@ -1531,6 +1568,7 @@ width: 80%;
     box-shadow: 0px 5px 7px #38e4a3;
     border-radius:20px 70px 0px 70px;
     border-bottom: none;
+    z-index: -1;
 }
 
 .project_post_card-circle_div_green  {
@@ -1544,6 +1582,7 @@ width: 80%;
     justify-content: center;
     align-items: center;
     border-radius:20px 188px 188px 190px;
+    
     }
 
     .project_post_card-circle_div_green > div > img, .project_post_card-circle_div_red > div > img {
@@ -1563,6 +1602,7 @@ width: 80%;
         box-shadow: 0px 5px 7px #f05d5e;
         border-radius:20px 70px 0px 70px;
         border-bottom: none;
+        z-index: -1;
     }
 
 
